# Azure-IoT-Edge-Core

edgelet/docker-rs/: Cargo.toml
edgelet/docker-rs/src/: lib.rs
edgelet/docker-rs/src/apis/: container_api.rs  image_api.rs  network_api.rs  system_api.rs  volume_api.rs
edgelet/dps/: Cargo.toml
edgelet/dps/src/: error.rs
edgelet/edgelet-core/: Cargo.toml
edgelet/edgelet-docker/: Cargo.toml
edgelet/edgelet-docker/src/: runtime.rs
edgelet/edgelet-hsm/: Cargo.toml
edgelet/edgelet-http/: Cargo.toml
edgelet/edgelet-http-mgmt/: Cargo.toml
edgelet/edgelet-http-workload/: Cargo.toml
edgelet/edgelet-http/src/: client.rs
edgelet/edgelet-iothub/: Cargo.toml
edgelet/edgelet-test-utils/: Cargo.toml
edgelet/edgelet-utils/: Cargo.toml
edgelet/hsm-rs/: Cargo.toml
edgelet/hsm-sys/: Cargo.toml
edgelet/hyper-named-pipe/: Cargo.toml
edgelet/iotedge/: Cargo.toml
edgelet/iotedged/: Cargo.toml  build.rs
edgelet/iothubservice/: Cargo.toml
edgelet/management/: Cargo.toml
edgelet/management/src/apis/: identity_api.rs  module_api.rs  system_information_api.rs
edgelet/provisioning/: Cargo.toml
edgelet/systemd/: Cargo.toml
edgelet/tokio-named-pipe/: Cargo.toml
edgelet/win-logger/: Cargo.toml
edgelet/workload/: Cargo.toml
edgelet/workload/src/apis/: workload_api.rs
