[package]
name = "dps"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]

[dependencies]
base64 = "0.9"
bytes = {path = "../../../bytes"}
chrono = { path = "../../../chrono", features = ["serde"] }
failure = {path = "../../../failure"}
futures = "0.1"
hyper = {path = "../../../hyper"}
log = "0.4"
percent-encoding = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = {path = "../../../json"}
tokio = {path = "../../../tokio"}
tokio-timer = {path = "../../../tokio/tokio-timer"}
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-utils = { path = "../edgelet-utils" }

[dev_dependencies]
tokio-core = "0.1"
