[package]
name = "edgelet-core"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
bytes = {path = "../../../bytes"}
chrono = { path = "../../../chrono", features = ["serde"] }
consistenttime = "0.2.0"
futures = "0.1"
failure = {path = "../../../failure"}
hmac = "0.5.0"
lazy_static = "1.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = {path = "../../../json"}
sha2 = "0.7.0"
log = "0.4"
url = "1.7"
tokio = {path = "../../../tokio"}
tokio-timer = {path = "../../../tokio/tokio-timer"}

edgelet-utils = { path = "../edgelet-utils" }

[dev-dependencies]
base64 = "0.9"
