[package]
name = "edgelet-docker"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
base64 = "0.9"
chrono = { path = "../../../chrono", features = ["serde"] }
failure = {path = "../../../failure"}
futures = "0.1"
hyper = {path = "../../../hyper"}
lazy_static = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = {path = "../../../json"}
tokio-core = {path = "../../../tokio-core"}
url = "1.7"

docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-utils = { path = "../edgelet-utils" }

[dev_dependencies]
tempfile = "2"
time = "0.1"

edgelet-test-utils = { path = "../edgelet-test-utils" }
