[package]
name = "edgelet-hsm"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]

[dependencies]
bytes = {path = "../../../bytes"}
failure = {path = "../../../failure"}

edgelet-core = { path = "../edgelet-core"}
hsm = { path = "../hsm-rs"}

[dev-dependencies]
base64 = "0.9"
hmac = "0.5.0"
sha2 = "0.7.0"
