[package]
name = "edgelet-http-workload"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
base64 = "0.9"
chrono = { path = "../../../chrono", features = ["serde"] }
failure = {path = "../../../failure"}
failure_derive = "0.1"
futures = "0.1"
http = {path = "../../../http"}
hyper = { path = "../../../hyper", features = ["compat"] }
log = "0.4"
serde = "1.0"
serde_json = {path = "../../../json"}

edgelet-core = { path = "../edgelet-core" }
edgelet-hsm = { path = "../edgelet-hsm" }
edgelet-http = { path = "../edgelet-http" }
edgelet-utils = { path = "../edgelet-utils" }
workload = { path = "../workload" }

[dev-dependencies]
edgelet-test-utils = { path = "../edgelet-test-utils" }
