[package]
name = "edgelet-http"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
bytes = {path = "../../../bytes"}
chrono = {path = "../../../chrono"}
failure = {path = "../../../failure"}
failure_derive = "0.1"
futures = "0.1"
http = {path = "../../../http"}
hyper = { path = "../../../hyper", features = ["compat"] }
log = "0.4"
percent-encoding = "1.0"
regex = {path = "../../../regex"}
serde = "1.0"
serde_json = {path = "../../../json"}
tokio-core = {path = "../../../tokio-core"}
tokio-io = {path = "../../../tokio/tokio-io"}
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-utils = { path = "../edgelet-utils" }
systemd = { path = "../systemd" }

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.4"
libc = "0.2"
tokio-uds = "0.1"

[target.'cfg(windows)'.dependencies]
hyper-named-pipe = { path = "../hyper-named-pipe" }
tokio-named-pipe = { path = "../tokio-named-pipe" }

[dev-dependencies]
httparse = "1.2"
lazy_static = "1.0"
nix = "0.10"
rand = "0.4"
scopeguard = "0.3.3"
tokio-core = {path = "../../../tokio-core"}
tempfile = "2"

edgelet-test-utils = { path = "../edgelet-test-utils" }
