[package]
name = "edgelet-iothub"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
base64 = "0.9"
chrono = {path = "../../../chrono"}
failure = {path = "../../../failure"}
futures = "0.1"
hyper = {path = "../../../hyper"}
percent-encoding = "1.0"
serde = "1.0"
serde_derive = "1.0"
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-utils = { path = "../edgelet-utils" }
iothubservice = { path = "../iothubservice" }

[dev_dependencies]
bytes = "0.4"
serde_json = "1.0"
tokio-core = "0.1"
