[package]
name = "edgelet-test-utils"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
failure = {path = "../../../failure"}
futures = "0.1"
hyper = {path = "../../../hyper"}
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio-io = {path = "../../../tokio/tokio-io"}

edgelet-core = { path = "../edgelet-core" }

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.4"

[target.'cfg(windows)'.dependencies]
httparse = "1.2"
mio = {path = "../../../mio-nonbroken"}
mio-named-pipes = {path = "../../../mio-named-pipes"}