[package]
name = "iotedge"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
description = """
The iotedge tool is used to manage the IoT Edge runtime.
"""

[dependencies]
bytes = {path = "../../../bytes"}
chrono = {path = "../../../chrono"}
chrono-humanize = {path = "../../../chrono-humanize-rs"}
clap = {path = "../../../clap"}
failure = {path = "../../../failure"}
failure_derive = "0.1"
futures = "0.1"
hyper = {path = "../../../hyper"}
tabwriter = "1.0"
tokio-core = {path = "../../../tokio-core"}
tokio-io = {path = "../../../tokio/tokio-io"}
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
management = { path = "../management" }
