[package]
name = "iotedged"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
base64 = "0.9"
clap = {path = "../../../clap"}
config = {path = "../../../config-rs"}
env_logger = {path = "../../../env_logger"}
failure = {path = "../../../failure"}
futures = "0.1"
hyper = {path = "../../../hyper"}
hyper-tls = {path = "../../../hyper-tls"}
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = {path = "../../../json"}
sha2 = "0.7.0"
tokio-core = {path = "../../../tokio-core"}
tokio-signal = {path = "../../../tokio-signal"}
url = "1.7"
url_serde = "0.2"

hsm = { path = "../hsm-rs"}
docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-hsm = { path = "../edgelet-hsm" }
edgelet-http = { path = "../edgelet-http" }
edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
edgelet-http-workload = { path = "../edgelet-http-workload" }
edgelet-iothub = { path = "../edgelet-iothub" }
edgelet-utils = { path = "../edgelet-utils" }
iothubservice = { path = "../iothubservice" }
provisioning = { path = "../provisioning" }

[target.'cfg(windows)'.dependencies]
windows-service = {path = "../../../windows-service-rs"}

win-logger = { path = "../win-logger" }

[dev_dependencies]
tempdir = "0.3.7"

edgelet-test-utils = { path = "../edgelet-test-utils" }

[target.'cfg(windows)'.build-dependencies]
winreg = "0.5.1"
version-compare = "0.0.6"