[package]
name = "iothubservice"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
chrono = {path = "../../../chrono"}
failure = {path = "../../../failure"}
futures = "0.1"
hyper = {path = "../../../hyper"}
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = {path = "../../../json"}
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-utils = { path = "../edgelet-utils" }

[dev_dependencies]
clap = "2.31"
hyper-tls = "0.1"
tokio-core = "0.1"
