[package]
name = "tokio-named-pipe"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[target.'cfg(windows)'.dependencies]
bytes = {path = "../../../bytes"}
futures = "0.1"
mio-named-pipes = {path = "../../../mio-named-pipes"}
tokio-core = {path = "../../../tokio-core"}
tokio-io = {path = "../../../tokio/tokio-io"}
winapi = { path = "../../../winapi-rs", features = ["namedpipeapi"] }

[dev-dependencies]
mio = "0.6"
rand = "0.4"
