[package]
name = "win-logger"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
failure = { path = "../../../failure"}
log = { version = "0.4", features = ["std"] }
winapi = { path = "../../../winapi-rs", features = ["winbase", "winnt"] }

edgelet-utils = { path = "../edgelet-utils" }
