[package]
name = "workload"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
base64 = "0.9"
failure = {path = "../../../failure"}
futures = "0.1"
hyper = {path = "../../../hyper"}
serde = "1.0"
serde_derive = "1.0"
serde_json = {path = "../../../json"}
serde_yaml = {path = "../../../serde-yaml"}
url = "1.5"

[dev-dependencies]
tokio-core = "*"
